--- a/UI.html
+++ b/UI.html
@@ -11,7 +11,7 @@ def index():
         # Fetch weather data and process it
         return render_template('results.html', city=city, weather_data=weather_data, camera_settings=camera_settings)
     else:
-        return render_template('index.html')
+        return render_template('indehtml')
 
 if __name__ == '__main__':
     app.run(debug=True)
